--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-streamlit
-pandas
-urllib3
-beautifulsoup4
-openai-whisper
-transformers
+streamlit>=1.34.0
+urllib3>=2.2.1
+beautifulsoup4>=4.12.3
+openai-whisper>=20231117
 numpy
 soundfile
 pydub
 bitsandbytes
-accelerate
-langchain-community
+langchain-community>=0.0.36
+langchain-core>=0.1.50
 TTS>=0.22.0
