--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 dependencies = [
+  "yt-dlp",
   "streamlit",
   "urllib3",
   "beautifulsoup4",
